[package]
name = "cf-tunnel"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { version = "0.10.2", features = ["futures-io"] }
tokio = { version = "1.34", features = ["full"] }
tokio-util = "0.7"
hickory-resolver = "0.24"
rustls = "0.21.0" # pinned for quinn
rustls-native-certs = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls-pemfile = "2.0.0"
capnp = "0.18"
capnp-rpc = "0.18"
capnp-futures = "0.18"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
async-compat = "0.2"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.5"
http = "1.0"
http-body-util = "0.1"
futures = "0.3"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
h2 = "0.4"
tokio-rustls = "0.25"
async-trait = "0.1"
cloudflare = "0.11"
pin-project = "1"

[build-dependencies]
capnpc = "0.18"
